<resources>
    <string name="app_name">AbschlussAufgabe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    -------------------Home Screen-------------------

    <string name="START">START</string>
    <string name="option">OPTION</string>
    <string name="Anomaly_List">ANOMALYS</string>

    -------------------Game Instructions-------------------

    <string name="How_to_Play">How to Play</string>
    <string name="Room">Use the arrows to move yourself in thr room.</string>
    <string name="Anomaly">In the room, the objects will change, so stay alert.</string>
    <string name="Report">If you notice any changes, report them by clicking on the Report button.</string>
    <string name="Play">Play</string>

    -------------------Option-------------------

    <string name="Option">OPTION</string>
    <string name="music">MUSIC</string>
    <string name="language">LANGUAGE</string>


    -------------------Anomaly List-------------------

    <string name="AnomaTitle">ANOMALYS</string>
    <string name="ghost1">Mimic</string>
    <string name="g1description">Mimics are capable of replicating the visual structure of an object.</string>
    <string name="ghost2">Shadow</string>
    <string name="g2description">Shadows hide in the shade of object.</string>
    <string name="ghost3">Lucy</string>
    <string name="g3description">Lucys are likes electrical devices, which is why they always stay around them.</string>
    <string name="ghost4">Casper</string>
    <string name="g4description">Caspers like to move objects elsewhere.</string>
    <string name="ghost5">Oemor</string>
    <string name="g5description">Oemor come very close to the person and want to sit next to them.</string>
    <string name="ghost6">Ermi</string>
    <string name="g6description">Ermis paints over pictures.</string>

    -------------------InGameBtns-------------------

    <string name="reportBtn">Report</string>

</resources>