<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeFragment">


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/startscreen1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-69dp">

        </pl.droidsonroids.gif.GifImageView>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="208dp"
            android:backgroundTint="@color/DarkBlue"
            android:fontFamily="@font/addisababa"
            android:text="@string/START"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAnomalys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/DarkBlue"
            android:fontFamily="@font/addisababa"
            android:text="@string/Anomaly_List"
            app:layout_constraintEnd_toEndOf="@+id/btnOption"
            app:layout_constraintStart_toStartOf="@+id/btnOption"
            app:layout_constraintTop_toBottomOf="@+id/btnOption" />

        <Button
            android:id="@+id/btnOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/DarkBlue"
            android:fontFamily="@font/addisababa"
            android:text="@string/option"
            app:layout_constraintEnd_toEndOf="@+id/btnStart"
            app:layout_constraintStart_toStartOf="@+id/btnStart"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>