<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.InstructionsFragment">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/backroundanomalylistscreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </pl.droidsonroids.gif.GifImageView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvRoom"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/midBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cvAnomaly"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.417">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvRoomInstr"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/strawberry"
                    android:text="@string/Room"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gifRoom"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="32dp"
                    android:src="@drawable/room"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.466"
                    app:layout_constraintStart_toStartOf="parent">

                </pl.droidsonroids.gif.GifImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvReport"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/midBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvAnomaly"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.417">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvReportInstr"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/strawberry"
                    android:gravity="center"
                    android:text="@string/Report"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/reportbtn"
                    android:layout_marginBottom="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                </pl.droidsonroids.gif.GifImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvAnomaly"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:backgroundTint="@color/midBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.417">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/strawberry"
                    android:gravity="center"
                    android:text="@string/Anomaly"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/plantscopy"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.533"
                    app:layout_constraintStart_toStartOf="parent">

                </pl.droidsonroids.gif.GifImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/addisababa"
            android:text="@string/How_to_Play"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPLAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/addisababa"
            android:textColor="@color/DarkBlue"
            android:textAllCaps="true"
            android:text="@string/Play"
            android:backgroundTint="@color/lightlila"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>